refactor GeminiService